<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.score.ScoreFragment">

        <android.support.constraint.Guideline
            android:id="@+id/guideline50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <!-- region team A -->
        <TextView
            android:id="@+id/tvTeamALabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:text="@string/team_a"
            app:layout_constraintEnd_toStartOf="@id/guideline50"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvTeamAScore"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/default_score"
            android:textSize="28sp"
            app:layout_constraintEnd_toStartOf="@id/guideline50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTeamALabel" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnTeamAPlusOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/add_one_point"
            app:layout_constraintEnd_toStartOf="@id/guideline50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTeamAScore" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnTeamAPlusThree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_three_point"
            app:layout_constraintEnd_toStartOf="@id/guideline50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnTeamAPlusOne" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnTeamAPlusFive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_five_point"
            app:layout_constraintEnd_toStartOf="@id/guideline50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnTeamAPlusThree" />
        <!-- endregion -->

        <!-- region team B-->
        <TextView
            android:id="@+id/tvTeamBLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_horizontal"
            android:text="@string/team_b"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline50" />

        <TextView
            android:id="@+id/tvTeamBScore"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/default_score"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline50"
            app:layout_constraintTop_toBottomOf="@id/tvTeamBLabel" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnTeamBPlusOne"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/add_one_point"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline50"
            app:layout_constraintTop_toBottomOf="@id/tvTeamBScore" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnTeamBPlusThree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_three_point"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline50"
            app:layout_constraintTop_toBottomOf="@id/btnTeamBPlusOne" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnTeamBPlusFive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_five_point"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline50"
            app:layout_constraintTop_toBottomOf="@id/btnTeamBPlusThree" />
        <!-- endregion -->

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnTeamAPlusFive" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/btnReset"
            app:layout_constraintStart_toStartOf="@id/guideline50"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>